--- a/.github/workflows/cli-reachability.yml
+++ b/.github/workflows/cli-reachability.yml
@@ -27,6 +27,7 @@ jobs:
         curl https://downloads.mend.io/cli/linux_amd64/mend -o /usr/local/bin/mend && chmod +x /usr/local/bin/mend
         echo run Mend dependencies scan
         mend version
+        echo === Running Scan ===
         mend dep -u --reachability-on
         echo === Log content ===
         cat ~/.mend/logs/sca/*.log
