--- a/.github/workflows/cli-reachability.yml
+++ b/.github/workflows/cli-reachability.yml
@@ -17,18 +17,27 @@ jobs:
       run: mvn clean install -DskipTests=true
 
 # The mend dep scan should be called AFTER a package manager build step such as "mvn clean install -DskipTests=true" or "npm install --only=prod"
+    - name: Mend CLI Download
+      env:
+        MEND_EMAIL: ${{secrets.MEND_EMAIL}}
+        MEND_USER_KEY: ${{secrets.MEND_USER_KEY}}
+        MEND_URL: https://saas.mend.io
+      run: |
+        echo === Downloading Mend CLI ==
+        curl https://downloads.mend.io/cli/linux_amd64/mend -o /usr/local/bin/mend && chmod +x /usr/local/bin/mend
+        echo === Mend CLI version: ===
+        mend version
+
     - name: Mend CLI Scan
       env:
         MEND_EMAIL: ${{secrets.MEND_EMAIL}}
         MEND_USER_KEY: ${{secrets.MEND_USER_KEY}}
         MEND_URL: https://saas.mend.io
       run: |
-        echo Downloading Mend CLI
-        curl https://downloads.mend.io/cli/linux_amd64/mend -o /usr/local/bin/mend && chmod +x /usr/local/bin/mend
-        echo run Mend dependencies scan
-        mend version
         echo === Running Scan ===
         mend dep -u --reachability-on
-        echo === Log content ===
-        cat ~/.mend/logs/sca/*.log
       continue-on-error: true
+
+    - name: Mend CLI Logs
+      run: cat ~/.mend/logs/sca/*.log
+
