--- a/.github/workflows/cli-windows-reachability.yml
+++ b/.github/workflows/cli-windows-reachability.yml
@@ -29,7 +29,7 @@ jobs:
         echo === Downloading Mend CLI ==
         curl https://downloads.mend.io/cli/windows_amd64/mend.exe -o C:\mend\cli\mend.exe
         echo === Mend CLI version: ===
-        .\mend version
+        .\mend.exe version
 
     - name: Mend CLI Scan
       env:
@@ -38,7 +38,7 @@ jobs:
         MEND_URL: https://saas.mend.io
       run: |
         echo === Running Scan ===
-        .\mend dep -u --reachability-on
+        .\mend.exe dep -u --reachability-on
       continue-on-error: true
 
     - name: Mend CLI Logs
