--- a/.github/workflows/cli-reachability-macos.yml
+++ b/.github/workflows/cli-reachability-macos.yml
@@ -17,10 +17,14 @@ jobs:
       run: |
         curl https://dlcdn.apache.org/maven/maven-3/3.8.8/binaries/apache-maven-3.8.8-bin.tar.gz -o maven.3.8.8.tar.gz
         tar xzvf maven.3.8.8.tar.gz
+        pwd
+        ls -lah
     - name: Build with Maven
       run: |
-        ~/apache-maven-3.8.8/bin/mvn --version
-        ~/apache-maven-3.8.8//bin/mvn clean install -DskipTests=true
+        ./apache-maven-3.8.8/bin/mvn --version
+        ./apache-maven-3.8.8//bin/mvn clean install -DskipTests=true
+
+        
 
 # The mend dep scan should be called AFTER a package manager build step such as "mvn clean install -DskipTests=true" or "npm install --only=prod"
     - name: Mend CLI Download
