--- a/.github/workflows/cli-reachability-linux.yml
+++ b/.github/workflows/cli-reachability-linux.yml
@@ -34,7 +34,7 @@ jobs:
       env:
         MEND_EMAIL: ${{secrets.MEND_EMAIL}}
         MEND_USER_KEY: ${{secrets.MEND_USER_KEY}}
-        MEND_URL: https://saas.mend.io
+        MEND_URL: https://saas.whitesourcesoftware.com
       run: |
         echo === Running Scan ===
         mend dep -u --reachability-on
