--- a/.github/workflows/cli-windows-reachability.yml
+++ b/.github/workflows/cli-windows-reachability.yml
@@ -24,7 +24,7 @@ jobs:
       env:
         MEND_EMAIL: ${{secrets.MEND_EMAIL}}
         MEND_USER_KEY: ${{secrets.MEND_USER_KEY}}
-        MEND_URL: https://saas.mend.io
+        MEND_URL: https://saas.whitesourcesoftware.com
       run: |
         echo '=== Downloading Mend CLI =='
         curl https://downloads.mend.io/cli/windows_amd64/mend.exe -o mend.exe
@@ -35,7 +35,7 @@ jobs:
       env:
         MEND_EMAIL: ${{secrets.MEND_EMAIL}}
         MEND_USER_KEY: ${{secrets.MEND_USER_KEY}}
-        MEND_URL: https://saas.mend.io
+        MEND_URL: https://saas.whitesourcesoftware.com
       run: |
         echo '=== Running Scan ==='
         .\mend.exe dep -u --reachability-on
