--- a/.github/workflows/cli-reachability-macos.yml
+++ b/.github/workflows/cli-reachability-macos.yml
@@ -32,7 +32,7 @@ jobs:
         MEND_URL: https://saas.whitesourcesoftware.com
       run: |
         echo === Downloading Mend CLI ==
-        curl https://downloads.mend.io/cli/darwin_amd64/mend -o /usr/local/bin/mend && chmod +x /usr/local/bin/mend
+        curl https://mend-unified-cli.s3.amazonaws.com/integration/wrapper/latest/darwin_amd64/mend -o /usr/local/bin/mend && chmod +x /usr/local/bin/mend
         echo === Mend CLI version: ===
         mend version
 
